# Salesforce-Netsuite-MCP

./: .env.example  .gitignore  Dockerfile  pyproject.toml
src/: __main__.py  auth.py  cross_tools.py  ns_client.py  ns_schema.py  ns_tools.py  ns_write_tools.py  pardot_client.py  pardot_tools.py  pardot_write_tools.py  query_validator.py  sanitize.py  schema_cache.py  server.py  sf_client.py  sf_schema.py  sf_tools.py  sf_write_tools.py
src/netsuite/: __init__.py  _pagination.py  _retry.py  client.py  exceptions.py  models.py
src/netsuite/api/: metadata.py  rest.py  suiteql.py
src/netsuite/auth/: __init__.py  base.py  tba.py
tests/: conftest.py  test_auth.py  test_cross_tools.py  test_ns_schema.py  test_ns_write_tools.py  test_pardot_client.py  test_pardot_tools.py  test_pardot_write_tools.py  test_query_validator.py  test_server_resources.py  test_sf_schema.py  test_sf_write_tools.py
